crates/pg_syntax/tests/snapshots/data/0007@1.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE cities (\n  name       text,\n  population real,\n  elevation  int     -- (in ft)\n);"
---
CreateStmt@0..94
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..19
    Ident@13..19 "cities"
  Whitespace@19..20 " "
  Ascii40@20..21 "("
  Newline@21..22 "\n"
  Whitespace@22..24 "  "
  ColumnDef@24..39
    NameP@24..28 "name"
    Whitespace@28..35 "       "
    TypeName@35..39
      TextP@35..39 "text"
  Ascii44@39..40 ","
  Newline@40..41 "\n"
  Whitespace@41..43 "  "
  ColumnDef@43..58
    Ident@43..53 "population"
    Whitespace@53..54 " "
    TypeName@54..58
      Real@54..58 "real"
  Ascii44@58..59 ","
  Newline@59..60 "\n"
  Whitespace@60..62 "  "
  ColumnDef@62..76
    Ident@62..71 "elevation"
    Whitespace@71..73 "  "
    TypeName@73..76
      IntP@73..76 "int"
  Whitespace@76..81 "     "
  SqlComment@81..91 "-- (in ft)"
  Newline@91..92 "\n"
  Ascii41@92..93 ")"
  Ascii59@93..94 ";"

