crates/pg_syntax/tests/snapshots/data/0011@1.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT DISTINCT city\n    FROM weather\n    ORDER BY city;"
---
SelectStmt@0..56
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  Distinct@7..15 "DISTINCT"
  Whitespace@15..16 " "
  ResTarget@16..20
    ColumnRef@16..20
      Ident@16..20 "city"
  Newline@20..21 "\n"
  Whitespace@21..25 "    "
  From@25..29 "FROM"
  Whitespace@29..30 " "
  RangeVar@30..37
    Ident@30..37 "weather"
  Newline@37..38 "\n"
  Whitespace@38..42 "    "
  SortBy@42..55
    Order@42..47 "ORDER"
    Whitespace@47..48 " "
    By@48..50 "BY"
    Whitespace@50..51 " "
    ColumnRef@51..55
      Ident@51..55 "city"
  Ascii59@55..56 ";"

