crates/pg_syntax/tests/snapshots/data/0026@1.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "ALTER TABLE products ALTER COLUMN price TYPE numeric(10,2);"
---
AlterTableStmt@0..59
  Alter@0..5 "ALTER"
  Whitespace@5..6 " "
  Table@6..11 "TABLE"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "products"
  Whitespace@20..21 " "
  AlterTableCmd@21..57
    Alter@21..26 "ALTER"
    Whitespace@26..27 " "
    Column@27..33 "COLUMN"
    Whitespace@33..34 " "
    Ident@34..39 "price"
    Whitespace@39..40 " "
    TypeP@40..44 "TYPE"
    Whitespace@44..45 " "
    ColumnDef@45..57
      TypeName@45..57
        Numeric@45..52 "numeric"
        Ascii40@52..53 "("
        AConst@53..55
          Iconst@53..55 "10"
        Ascii44@55..56 ","
        AConst@56..57
          Iconst@56..57 "2"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

