crates/pg_syntax/tests/snapshots/data/0037@1.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TYPE bug_status AS ENUM ('new', 'open', 'closed');"
---
CreateEnumStmt@0..57
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  TypeP@7..11 "TYPE"
  Whitespace@11..12 " "
  Ident@12..22 "bug_status"
  Whitespace@22..23 " "
  As@23..25 "AS"
  Whitespace@25..26 " "
  EnumP@26..30 "ENUM"
  Whitespace@30..31 " "
  Ascii40@31..32 "("
  Sconst@32..37 "'new'"
  Ascii44@37..38 ","
  Whitespace@38..39 " "
  Sconst@39..45 "'open'"
  Ascii44@45..46 ","
  Whitespace@46..47 " "
  Sconst@47..55 "'closed'"
  Ascii41@55..56 ")"
  Ascii59@56..57 ";"

