crates/pg_syntax/tests/snapshots/data/0038@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE CAST (bigint AS int4) WITHOUT FUNCTION AS IMPLICIT;
---
CreateCastStmt@0..58
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Cast@7..11 "CAST"
  Whitespace@11..12 " "
  Ascii40@12..13 "("
  TypeName@13..19
    Bigint@13..19 "bigint"
  Whitespace@19..20 " "
  As@20..22 "AS"
  Whitespace@22..23 " "
  TypeName@23..27
    Ident@23..27 "int4"
  Ascii41@27..28 ")"
  Whitespace@28..29 " "
  Without@29..36 "WITHOUT"
  Whitespace@36..37 " "
  Function@37..45 "FUNCTION"
  Whitespace@45..46 " "
  As@46..48 "AS"
  Whitespace@48..49 " "
  ImplicitP@49..57 "IMPLICIT"
  Ascii59@57..58 ";"

